--- a/styles.css
+++ b/styles.css
@@ -116,16 +116,21 @@ p {
 }
 
 .home-icon-link {
-    position: fixed;
-    right: 10px;
-    top: 95%;
-    transform: translateY(-50%);
     width: 50px;
     height: 50px;
-    z-index: 1000;
     text-decoration: none;
     opacity: 0.8;
     transition: opacity 0.3s ease-in-out;
+}
+
+#topButtonsContainer {
+    position: fixed;
+    right: 10px;
+    bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 1000;
 }
 
 .home-icon {
