--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
     body {
         margin: 0 !important;
     }
+
+    .empire-duels-link {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
